api : CRUD Survey & Choice